# solanaceae_plugin

./: CMakeLists.txt
solanaceae/plugin/: plugin.cpp  plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  solana_plugin_v1.h  version_helper.inl
